kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: homework-pod
    spec:
      nodeSelector:
        homework: "true"
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: homework-pvc 
        - name: config-volume
          configMap:
            name: homework-config 
      containers:
        - name: web-server
          image: nginx:alpine
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: shared-data
              mountPath: /homework
            - name: config-volume
              mountPath: /homework/conf 
          command: ["/bin/sh", "-c"]
          args:
            - |
              echo '
              server {
                  listen 8000;
                  server_name localhost;
                  location / {
                      root /homework;
                      index index.html;
                  }
                  location /conf/ {
                    alias /homework/conf/;
                    autoindex on;
                    autoindex_format html;
                  }
              }' > /etc/nginx/conf.d/default.conf;
              nginx -g "daemon off;"
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
